# rust-quizgame

./: .gitignore  Cargo.toml  README.md  config.yml
backend/: Cargo.toml  questions.csv
backend/src/: Cargo.toml  main.rs
backend/src/structs/: config.rs  message_handler.rs  mod.rs  player.rs  stats.rs
backend/src/util/: auth.rs  generate_qr.rs  message_handler.rs  mod.rs  read_questions.rs  stats.rs
frontend/: Cargo.toml  admin.html  index.html  login.html  quiz.html
frontend/assets/css/: style.css
frontend/assets/js/: admin.js  login.js  quiz.js  script.js  session.js  setName.js  stats.js
frontend/page/: admin.html  index.html  login.html  qr.html  quiz.html
frontend/page/assets/css/: style.css
frontend/page/assets/js/: admin.js  index.js  login.js  qr.js  quiz.js  session.js  stats.js  util.js
frontend/src/: main.rs
frontend/src/routes/: admin.rs  index.rs  login.rs  qr.rs  quiz.rs
frontend/static/: index.html  qr.html
frontend/static/assets/js/: index.js  login.js
src/: backend.rs  frontend.rs  main.rs
src/backend/: backend.rs  util.rs
src/backend/structs/: adminsessions.rs  message_handler.rs  next_question.rs  question.rs
src/backend/util/: auth.rs  generate_qr.rs  message_handler.rs  read_questions.rs  stats.rs
src/frontend/: frontend.rs  routes.rs
src/frontend/routes/: about.rs  admin.rs  index.rs  login.rs  qr.rs  quiz.rs
src/frontend/static/: admin.html
src/frontend/static/assets/css/: style.css
src/frontend/static/assets/js/: admin.js  login.js  qr.js  quiz.js  session.js
test/: questions.csv
