[package]
name = "quizgame-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc = "0.0.1"
axum = "0.6.15"
chrono = "0.4.24"
csv = "1.2.1"
display = "0.1.2"
md5 = "0.7.0"
message = "0.1.0"
mutex = "0.1.0"
serde = {version= "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tungstenite = "0.19.0"
